kmd has been added, regex worked

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,27 +6,28 @@ set(CMAKE_C_STANDART_REQURED ON)
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDART_REQURED ON)
 
-set(CMAKE_CXX_FLAGS "-g -O0 -Wall -fprofile-arcs -ftest-coverage")
-set(CMAKE_C_FLAGS "-g -O0 -Wall -fprofile-arcs -ftest-coverage")
-set(CMAKE_EXE_LINKER_FLAGS "-fprofile-arcs -ftest-coverage")
+set(CMAKE_C_FLAGS "-g -O0 -Wall -Wextra -Werror")
+#set(CMAKE_CXX_FLAGS "-g -O0 -Wall -fprofile-arcs -ftest-coverage")
+#set(CMAKE_C_FLAGS "-g -O0 -Wall -fprofile-arcs -ftest-coverage")
+#set(CMAKE_EXE_LINKER_FLAGS "-fprofile-arcs -ftest-coverage")
 
-#add_library(word_lib STATIC
-#        ${CMAKE_CURRENT_SOURCE_DIR}/project/word_lib/word.c
-#        )
-#
-#target_include_directories(word_lib
-#        PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/project/include
-#        )
+add_library( lib_search_by_files_in_dir STATIC
+        ${CMAKE_CURRENT_SOURCE_DIR}/project/lib_search_by_files_in_dir/search_by_files_in_dir.c
+        project/lib_search_by_files_in_dir/search_word_in_str.c)
+
+target_include_directories( lib_search_by_files_in_dir
+        PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/project/include
+        )
 
 add_executable(main
-        ${CMAKE_CURRENT_SOURCE_DIR}/project/src/main.c project/include/search_by_files_in_dir.h)
+        ${CMAKE_CURRENT_SOURCE_DIR}/project/src/main.c)
 
 target_include_directories(main
         PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/project/include
         )
 
-#target_link_libraries(IZ-1 word_lib)
-#
+target_link_libraries(main lib_search_by_files_in_dir)
+
 #add_executable(tests
 #        ${CMAKE_CURRENT_SOURCE_DIR}/tests/test.cpp
 #        )
