--- a/.travis.yml
+++ b/.travis.yml
@@ -42,10 +42,10 @@ jobs:
       script:
         - cd ..
         - linters/cppcheck/cppcheck  project --enable=all --error-exitcode=1 -I project/include --suppress=missingIncludeSystem -i project/tests
-        #- linters/cppcheck/cppcheck --enable=all --error-exitcode=1 --inconclusive include/* src/* tests/*
 
     - stage: linters
       name: "Linters"
       script:
-        - python2.7 ../linters/cpplint/cpplint.py --extensions=c include/* src/* tests/*
-        - python2.7 ../linters/cpplint/cpplint.py --extensions=c++ tests/*
+        - cd ..
+        - python2.7 linters/cpplint/cpplint.py --extensions=c project/include/* project/src/* project/lib_search_by_files_in_dir/*
+        - python2.7 linters/cpplint/cpplint.py --extensions=cpp tests/*
